--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 								<li>
 									<a href="#">College Advising</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Our Philosophy on College Admissions</a></li>
+										<li><a href="#">Essays</a></li>
+										<li><a href="#">Application Help</a></li>
 										<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
@@ -51,9 +51,22 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">K-8 Tutoring</a></li>
-								<li><a href="right-sidebar.html">9-12 Tutoring</a></li>
-								<li><a href="no-sidebar.html">Login</a></li>
+								<li>
+									<a href="#">Standardized Testing</a>
+									<ul>
+										<li><a href="#">How to ACE a Standardized Test</a></li>
+										<li><a href="#">ACT</a></li>
+										<li><a href="#">SAT</a></li>
+									</ul>
+								</li>
+								<li><a href="right-sidebar.html">Classroom Tutoring</a>
+									<ul>
+										<li><a href="#">How We Tutor</a></li>
+										<li><a href="#">K-8</a></li>
+										<li><a href="#">High School</a></li>
+									</ul>
+								</li>
+								<li><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
