--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">About Us</a></li>
+								<li><a href="no-sidebar.html">About Us</a></li>
 								<li>
 									<a href="#">College Advising</a>
 									<ul>
@@ -78,7 +78,7 @@
 						<h2>Academics can be a Tough Nut to <strong>Crack</strong>.</h2>
 						<p>
 							Our Job is to Make it Easier for You <br> <a href="http://html5up.net">HTML5 UP</a>.
-							With a trackrecord of success, our team seeks to provide <br> honest, helpful, and honed instruction and college advising for our students  <a href="http://html5up.net/license">CCA</a> license.
+							With a track record of success, our team seeks to provide <br> honest, helpful, and honed instruction and college advising for our students  <a href="http://html5up.net/license">CCA</a> license.
 						</p>
 					</header>
 				</section>
