--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -30,11 +30,13 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<li><a href="no-sidebar.html">About Us</a></li>
+								<li>
+									<a href="#">College Advising</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Our Philosophy on College Admissions</a></li>
+										<li><a href="#">Essays</a></li>
+										<li><a href="#">Application Help</a></li>
 										<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
@@ -47,9 +49,22 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li>
+									<a href="#">Standardized Testing</a>
+									<ul>
+										<li><a href="#">How to ACE a Standardized Test</a></li>
+										<li><a href="#">ACT</a></li>
+										<li><a href="#">SAT</a></li>
+									</ul>
+								</li>
+								<li><a href="right-sidebar.html">Classroom Tutoring</a>
+									<ul>
+										<li><a href="#">How We Tutor</a></li>
+										<li><a href="#">K-8</a></li>
+										<li><a href="#">High School</a></li>
+									</ul>
+								</li>
+								<li><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -61,9 +76,9 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">No Sidebar</a></h2>
+								<h2><a href="#">About Us</a></h2>
 								<p>
-									Morbi convallis lectus malesuada sed fermentum dolore amet
+									Hi! We're Arman Popli and Duane Chen, two juniors at Northwestern University passionate about making education and achievment attainable. We've seen how hard students have struggled throughout the Covid-19 induced virtual learning environment and we think we can help. We started Mentorprep to provide honest help in a stressful precollegiate learning environment 
 								</p>
 							</header>
 							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
