--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">About Us</a></h1>
 							</header>
 						</div>
 
@@ -76,7 +76,7 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">About Us</a></h2>
+								<h2><a href="#">Arman and Duane</a></h2>
 								<p>
 									Hi! We're Arman Popli and Duane Chen, two juniors at Northwestern University passionate about making education and achievment attainable. We've seen how hard students have struggled throughout the Covid-19 induced virtual learning environment and we think we can help. We started Mentorprep to provide honest help in a stressful precollegiate learning environment 
 								</p>
