--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">MentorPrep</a></h1>
 								<hr />
-								<p>Develop your Passions - Succeed in your Studies</p>
+								<p>Develop your Passions - Succeed in your Goals</p>
 							</header>
 							<footer>
 							</footer>
@@ -34,36 +34,27 @@
 							<ul>
 								<li><a href="no-sidebar.html">About Us</a></li>
 								<li>
-									<a href="#">College Advising</a>
+									<a href="#">Our Philosophy on College Admissions</a>
 									<ul>
-										<li><a href="#">Our Philosophy on College Admissions</a></li>
+										<li><a href="Philosophy_College_Admit_Page.html">Our Philosophy on College Admissions</a></li>
 										<li><a href="#">Essays</a></li>
 										<li><a href="#">Application Help</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+									</ul>
+								</li>
+								<li><a href="right-sidebar.html">College Admissions Help</a>
+									<ul>
+										<li><a href="#">Freshmen</a></li>
+										<li><a href="#">Sophmores</a></li>
+										<li><a href="#">Juniors</a></li>
+										<li><a href="#">Seniors</a></li>
 									</ul>
 								</li>
 								<li>
 									<a href="#">Standardized Testing</a>
 									<ul>
-										<li><a href="#">How to ACE a Standardized Test</a></li>
+										<li><a href="test_acing.html">How to ACE a Standardized Test</a></li>
 										<li><a href="#">ACT</a></li>
 										<li><a href="#">SAT</a></li>
-									</ul>
-								</li>
-								<li><a href="right-sidebar.html">Classroom Tutoring</a>
-									<ul>
-										<li><a href="#">How We Tutor</a></li>
-										<li><a href="#">K-8</a></li>
-										<li><a href="#">High School</a></li>
 									</ul>
 								</li>
 								<li><a href="no-sidebar.html">Contact Us</a></li>
@@ -75,10 +66,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Academics can be a Tough Nut to <strong>Crack</strong>.</h2>
+						<h2>Collega Application's can be Stressful but we're here to Help!</h2>
 						<p>
-							Our Job is to Make it Easier for You <br> <a href="http://html5up.net">HTML5 UP</a>.
-							With a track record of success, our team seeks to provide <br> honest, helpful, and honed instruction and college advising for our students  <a href="http://html5up.net/license">CCA</a> license.
+							Our Job is to Make it Easier for You <br> 
+							With a track record of success, MentorPrep seeks to provide <br> honest, helpful, and honed college advising for our students.
 						</p>
 					</header>
 				</section>
