--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -26,47 +26,37 @@
 						</div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<li><a href="no-sidebar.html">About Us</a></li>
-								<li>
-									<a href="#">College Advising</a>
-									<ul>
-										<li><a href="#">Our Philosophy on College Admissions</a></li>
-										<li><a href="#">Essays</a></li>
-										<li><a href="#">Application Help</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#">Standardized Testing</a>
-									<ul>
-										<li><a href="#">How to ACE a Standardized Test</a></li>
-										<li><a href="#">ACT</a></li>
-										<li><a href="#">SAT</a></li>
-									</ul>
-								</li>
-								<li><a href="right-sidebar.html">Classroom Tutoring</a>
-									<ul>
-										<li><a href="#">How We Tutor</a></li>
-										<li><a href="#">K-8</a></li>
-										<li><a href="#">High School</a></li>
-									</ul>
-								</li>
-								<li><a href="no-sidebar.html">Contact Us</a></li>
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="no-sidebar.html">About Us</a></li>
+							<li>
+								<a href="Philosophy_College_Admit_Page.html">Our Philosophy on College Admissions</a>
+								<ul>
+									<li><a href="#">Our Philosophy on College Admissions</a></li>
+									<li><a href="#">Essays</a></li>
+									<li><a href="#">Application Help</a></li>
+								</ul>
+							</li>
+							<li><a href="right-sidebar.html">College Admissions Help</a>
+								<ul>
+									<li><a href="#">Freshmen</a></li>
+									<li><a href="#">Sophmores</a></li>
+									<li><a href="#">Juniors</a></li>
+									<li><a href="#">Seniors</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Standardized Testing</a>
+								<ul>
+									<li><a href="#">How to ACE a Standardized Test</a></li>
+									<li><a href="#">ACT</a></li>
+									<li><a href="#">SAT</a></li>
+								</ul>
+							</li>
+							<li><a href="no-sidebar.html">Contact Us</a></li>
+						</ul>
+					</nav>
 
 				</div>
 
@@ -78,7 +68,10 @@
 							<header>
 								<h2><a href="#">Arman and Duane</a></h2>
 								<p>
-									Hi! We're Arman Popli and Duane Chen, two juniors at Northwestern University passionate about making education and achievment attainable. We've seen how hard students have struggled throughout the Covid-19 induced virtual learning environment and we think we can help. We started Mentorprep to provide honest help in a stressful precollegiate learning environment 
+									Hi! We're Arman Popli and Duane Chen, two juniors at Northwestern University passionate about making education
+									 and achievment attainable. We've seen how hard students have struggled throughout the Covid-19 induced virtual
+									  learning environment and we think we can help. We started Mentorprep to provide honest help in a stressful 
+									  precollegiate learning environment 
 								</p>
 							</header>
 							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
